2010-03-20 1.2 beta 1 Release

           o Check for exception that should not, but in some cases could 
             occur when trying to format parameter arguments.

           o Use only one type of date format so that time portion of Date
             types is not dropped!

           o use to_date function for Oracle (Issue 14)
           
           o performance improvements
           
           o fix: respect DumpSqlMaxLineLength option. 
           
           o various other fixes (including Issues 8 and 9)

2009-02-26 1.2 alpha 2 Release

           o (Issue 1) fix bug where batch of logged SQL wasn't cleared
             properly when using batched SQL.

           o Added log4jdbc.statement.warn system property; defaults to false.

             This is a new option to control the SQL Statement warnings in the
             log.  When Statement objects are used by the application, the SQL
             in the log is preceded by "{WARNING: Statement used to run SQL}"
             This was always on in previous releases.  Now it
             is off by default, and can be turned on by setting this property.

           o (Issue 2) add getter methods across the board for the real
             wrapped object.

2008-11-08 1.2 alpha 1 Release

           o added a new logger "jdbc.connection" to dump connection open and
             close events as well as dumping all open connection numbers.  This
             is very useful for hunting down connection leak problems.

           o several new options to produce better SQL output:

             log4jdbc.dump.booleanastruefalse - many RDBMS's don't have a
             native boolean type and store booleans as a 1 or 0.  Setting this
             option to false will show boolean bind variables as 1 or 0.
             Setting this to true will show the boolean as true or false.
             (Note that the default for this setting is false, contrary to the
             previous way log4jdbc worked.)
